Added text for meal pages

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header id="header">
-    <h1>Culture Corner🧑🏾‍🍳</h1>
+    <h1 id="website-name">Culture Corner🧑🏾‍🍳</h1>
   </header>
   <main>
 
     <div id="main-header">
-    <h2 id="intro-text">Choose a cuisine to view related meals</h2>
-    <button id="randomizer">Randomizer</button>
+    <h1 id="intro-text">Choose a cuisine to view related meals</h1>
+    <button id="randomizer">Random Meal</button>
     </div>
     <div id="countries">
       
