--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Culture Corner</title>
+ <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Bebas+Neue">
  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
