--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 <body>
   <header id="header">
-    <h1 id="website-name">Culture Corner🧑🏾‍🍳</h1>
+    <h1 class="website-name">Culture Corner🧑🏾‍🍳</h1>
+    <a href="favorites.html" id="favorite-link" class="nav-link">Favorites</a>
   </header>
   <main>
 
-    <div id="main-header">
+    <div class="main-header">
     <h1 id="intro-text">Choose a cuisine to view related meals</h1>
-    <button id="randomizer">Random Meal</button>
+    <button class="randomizer">Random Meal</button>
     </div>
     <div id="countries">
       
     </div>
-    <div id="favorites">
-      <h3 id="favorite-text"></h3>
-    </div>
+    
   </main>
   <footer>
 
   </footer>
+  <script src="https://kit.fontawesome.com/1a67654050.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
